fix header not getting stuck in the top in mobile in main tab page

--- a/webapp/src/shared/components/templates/MainTabPageTemplate/MainTabPageTemplate.css
+++ b/webapp/src/shared/components/templates/MainTabPageTemplate/MainTabPageTemplate.css
@@ -34,6 +34,7 @@
 .main-tab-template .rows-list-template-rows {
   grid-row: 3/4;
   padding-bottom: var(--padding-top-bottom);
+  overflow-y: auto;
 }
 
 @media all and (max-width: 768px) {
